Fix minor copy issues

--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -68,7 +68,7 @@
                 <h3>Average Directional Index in Relation to Dow</h3>
                 <p>Determine if the ADX trend is reflected in Dow interval</p>
                 <form id="queryThree">
-                    <label for="queryThreeSelect">Starting Year</label>
+                    <label for="queryThreeSelect">Trend Type</label>
                     <select name="trend" id="queryThreeSelect" required>
                         <option value="">Select a trend type</option>
                     </select>
